--- a/package.json
+++ b/package.json
@@ -20,25 +20,29 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
-    "@babel/register": "^7.16.5",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.5.1",
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/node": "^7.22.6",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "@types/node": "^20.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0",
     "simple-pre-commit": "^1.2.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.5.4"
+    "typescript": "^5.1.6"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
+  },
+  "volta": {
+    "node": "18.17.0",
+    "yarn": "4.0.0-rc.48"
   }
 }
