--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
     "simple-pre-commit": "^1.2.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
