--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-ts-starter",
   "version": "4.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "Horus Lugo",
   "license": "MIT",
   "scripts": {
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "^7.22.5",
+    "@types/libsodium-wrappers": "^0",
     "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -45,5 +46,13 @@
   "volta": {
     "node": "18.17.0",
     "yarn": "4.0.0-rc.48"
+  },
+  "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "libsodium-wrappers": "^0.7.11",
+    "play-dl": "^1.9.6"
   }
 }
